# cellmeter

./: .pre-commit-config.yaml  README.md  REPLICATION_SETUP.md  architecture.drawio  system_conf.md
docs/: architecture-sw.drawio  architecture.drawio  data-collection-strategy.md  system_conf.md
software/edge/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
software/edge/app/: config.py  db_client.py  main.py  models.py  poller.py  sensors.py  session_manager.py  ssh_client.py
software/edge/scripts/: setup-replication.sh
software/ground/: .env.example  README.md  docker-compose.yml  push_ground_wifi_rssi.sh  start.sh
software/ground/grafana/provisioning/dashboards/: cellmeter-dashboard.json  ground-station.json  old-grafana.json
software/ground/grafana/provisioning/datasources/: influxdb.yml  victoriametrics.yml
